# QT_course_design

./: CMakeLists.txt  LICENSE  QtCourseDesign_zh_CN.ts  README.md  calculator.cpp  calculator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
